--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,5 +9,5 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-      - run: python -m pip install --upgrade
+      - run: python -m pip install --upgrade -r requirements.txt
       - run: pytest
